<?xml version="1.0"?>
<package format="3">
  <name>twist_mux_msgs</name>
  <version>2.1.0</version>
  <description>The twist_mux msgs and actions package</description>

  <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>

  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
