<?xml version="1.0"?>
<package format="3">
  <name>twist_mux_msgs</name>
  <version>3.0.1</version>
  <description>The twist_mux msgs and actions package</description>

  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
